# M68000

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: types.h
src/cpu/: cpu.cpp  cpu.h  effective_address.h  execution_properties.h
src/cpu/ea/: effective_address.h
src/cpu/instructions/: instructions.cpp  instructions.h
src/cpu/instructions/execute/: add_handler.h  and_handler.h  asx_handler.h  bcc_handler.h  bcd_handler.h  clr_handler.h  cmp_handler.h  eor_handler.h  execution_handlers.h  lea_handler.h  lsx_handler.h  move_handler.h  nop_handler.h  not_handler.h  or_handler.h  rox_handler.h  sub_handler.h  swap_handler.h  tst_handler.h
src/cpu/instructions/generate/: add_generator.h  and_generator.h  bcc_generator.h  bcd_generator.h  binary_instruction.h  binary_instruction_generator.h  clr_generator.h  cmp_generator.h  eor_generator.h  lea_generator.h  move_generator.h  nop_generator.h  not_generator.h  or_generator.h  shift_rotation_generator.h  sub_generator.h  swap_generator.h  tst_generator.h  unary_instruction_generator.h  x_instrcution_generator.h
src/cpu/registers/: program_counter.h  registers.h  status_register.h
src/memory/: layout.cpp  layout.h  memory.cpp  memory.h  memory_bank.h
test/: CMakeLists.txt  types_test.cpp
test/cpu/: effective_addressing_mode_test.cpp  status_register_test.cpp
test/cpu/instruction/generator/: instruction_generate_all.cpp  instruction_generate_all.h  instruction_generate_eor_test.cpp  instruction_generate_eor_test.h  instruction_generate_move_test.cpp  instruction_generator_add_test.cpp  instruction_generator_add_test.h  instruction_generator_and_test.cpp  instruction_generator_and_test.h  instruction_generator_bcc_test.cpp  instruction_generator_bcc_test.h  instruction_generator_bcd_test.cpp  instruction_generator_bcd_test.h  instruction_generator_clr_test.cpp  instruction_generator_clr_test.h  instruction_generator_cmp_test.cpp  instruction_generator_cmp_test.h  instruction_generator_common.h  instruction_generator_eor_test.cpp  instruction_generator_lea_test.cpp  instruction_generator_lea_test.h  instruction_generator_move_test.cpp  instruction_generator_move_test.h  instruction_generator_nop_test.cpp  instruction_generator_nop_test.h  instruction_generator_not_test.cpp  instruction_generator_not_test.h  instruction_generator_or_test.cpp  instruction_generator_or_test.h  instruction_generator_shift_rotate_test.cpp  instruction_generator_shift_rotate_test.h  instruction_generator_sub_test.cpp  instruction_generator_sub_test.h  instruction_generator_swap_test.cpp  instruction_generator_swap_test.h  instruction_generator_tst_test.cpp  instruction_generator_tst_test.h
test/mem/: mem_bank_test.cpp
